# pangea-multipass

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  EXTENDING.md  README.md
.github/: renovate.json
.github/workflows/: ci.yml
examples/: README.md
examples/langchain_examples/: 01-rag-LangChain-all-sources.py  02-rag-LangChain-gdrive.py  05-github-check-access.py  05-github-check.py  pyproject.toml
examples/llama_index_examples/: 01-rag-LlamaIndex-gdrive-processor.py  02-gdrive-check-access.py  02-rag-LlamaIndex-all-sources-processor.py  03-rag-LlamaIndex-gdrive-filter.py  05-github-check-access.py  05-github-check.py  06-jira-check-account-id.py  07-jira-check-acess.py  07-jira-check-admin-token.py  07-jira-check-user-token.py  08-confluence-admin-token.py  08-confluence-check-access.py  08-confluence-user-token.py  README.md  pyproject.toml
examples/multipass_examples/: 01-github-check-access.py  01-github-check-admin-credentials.py  01-github-check-admin-token.py  01-github-check-user-credentials.py  01-github-check-user-token.py  01-github-check.py  02-gdrive-check-admin-credentials.py  02-gdrive-check-user-credentials.py  02-gdrive-check.py  03-slack-check-access.py  03-slack-check-admin-credentials.py  03-slack-check-admin-token.py  03-slack-check-user-token.py  03-slack-check.py  04-dropbox-check-access.py  04-dropbox-check.py  05-one-drive-check-admin-token.py  06-gitlab-check-access.py  README.md  pyproject.toml
examples/simple/: 04-gdrive-check.py  README.md  pyproject.toml
pangea_multipass_lib/examples/: README.md
pangea_multipass_lib/examples/langchain_examples/: 01-rag-LangChain-all-sources.py  02-rag-LangChain-gdrive.py  05-github-check.py
pangea_multipass_lib/examples/llama_index_examples/: 01-rag-LlamaIndex-gdrive-processor.py  02-rag-LlamaIndex-all-sources-processor.py  03-rag-LlamaIndex-gdrive-filter.py  04-gdrive-check.py  05-github-check.py  README.md
pangea_multipass_lib/examples/multipass_examples/: 01-github-check.py  02-gdrive-check.py  pyproject.toml
pangea_multipass_lib/examples/simple/: 04-gdrive-check.py  README.md
pangea_multipass_lib/pangea-multipass/: .ci.yml  pyproject.toml
pangea_multipass_lib/pangea-multipass-langchain/: .ci.yml  pyproject.toml
pangea_multipass_lib/pangea-multipass-langchain/pangea_multipass_langchain/: langchain.py
pangea_multipass_lib/pangea-multipass-llama-index/: .ci.yml  pyproject.toml
pangea_multipass_lib/pangea-multipass-llama-index/pangea_multipass_llama_index/: llama_index.py
pangea_multipass_lib/pangea-multipass/pangea_multipass/: __init__.py  core.py  github_reader.py
pangea_multipass_lib/pangea-multipass/pangea_multipass/sources/: __init__.py
pangea_multipass_lib/pangea-multipass/pangea_multipass/sources/confluence/: confluence.py
pangea_multipass_lib/pangea-multipass/pangea_multipass/sources/gdrive/: __init__.py  gdrive.py
pangea_multipass_lib/pangea-multipass/pangea_multipass/sources/github/: __init__.py  github.py
pangea_multipass_lib/pangea-multipass/pangea_multipass/sources/jira/: jira.py
rag_auth_lib/examples/: README.md
rag_auth_lib/examples/langchain_examples/: 04-rag-LangChain-all-sources.py  04-rag-LangChain-gdrive.py  pyproject.toml
rag_auth_lib/examples/llama_index_examples/: 07-1-rag-LlamaIndex-gdrive-processor.py  07-2-rag-LlamaIndex-all-sources-processor.py  07-3-rag-LlamaIndex-gdrive-filter.py  pyproject.toml
rag_auth_lib/pangea-auth-core/: README.md  pyproject.toml
rag_auth_lib/pangea-auth-core/pangea_auth_core/: __init__.py  core.py
rag_auth_lib/pangea-auth-core/pangea_auth_core/sources/: __init__.py
rag_auth_lib/pangea-auth-core/pangea_auth_core/sources/confluence/: confluence.py
rag_auth_lib/pangea-auth-core/pangea_auth_core/sources/gdrive/: gdrive.py
rag_auth_lib/pangea-auth-core/pangea_auth_core/sources/jira/: jira.py
rag_auth_lib/pangea-auth-langchain/: README.md  pyproject.toml
rag_auth_lib/pangea-auth-langchain/pangea_auth_langchain/: langchain.py
rag_auth_lib/pangea-auth-llama-index/: README.md  pyproject.toml
rag_auth_lib/pangea-auth-llama-index/pangea_auth_llama_index/: llama_index.py
rag_auth_lib/pangea-multipass/: pyproject.toml
rag_auth_lib/pangea-multipass-langchain/: pyproject.toml
rag_auth_lib/pangea-multipass-llama-index/pangea_auth_llama_index/: llama_index.py
rag_auth_lib/pangea-multipass/pangea_auth_core/sources/confluence/: confluence.py
rag_auth_lib/pangea-multipass/pangea_auth_core/sources/jira/: __init__.py  jira.py
