[project]
name = "langchain_examples"
version = "0.1.0"
description = "Pangea Multipass authorization library for LangChain"
authors = [
    { name = "Apurv Jawle", email = "apurv.jawle@pangea.cloud" }
]
license = "MIT"
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "pangea-multipass-langchain (>=0.2.0)",
    "pangea-multipass (>=0.2.0)",
    "google-api-python-client==2.181.0",
    "google-auth-httplib2 (>=0.2.0)",
    "langchain-google-community==2.0.7",
    "lxml==6.0.1",
    "faiss-cpu==1.12.0",
    "boto3==1.40.24",
    "langchain-aws==0.2.31",
]

[dependency-groups]
dev = [
    "mypy==1.17.1",
]

[tool.uv.sources]
pangea-multipass = { path = "../../packages/pangea-multipass", editable = true }
pangea-multipass-langchain = { path = "../../packages/pangea-multipass-langchain", editable = true }

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
