[project]
name = "llama_index_examples"
version = "0.2.0"
description = "Pangea Multipass authorization library for Llama Index"
authors = [
    { name = "Apurv Jawle", email = "apurv.jawle@pangea.cloud" }
]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "pangea-multipass-llama-index (>=0.2.0)",
    "pangea-multipass (>=0.2.0)",
    "llama-index-llms-bedrock (==0.3.3)",
    "llama-index-embeddings-bedrock (==0.5.0)",
    "llama-index-readers-google (==0.6.0)",
    "llama-index-readers-confluence (==0.3.1)",
    "llama-index-readers-jira (==0.4.1)",
]

[tool.poetry.dependencies]
pangea-multipass-llama-index = { path = "../../packages/pangea-multipass-llama-index", develop = true }
pangea-multipass = { path = "../../packages/pangea-multipass", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "1.14.1"

[[tool.mypy.overrides]]
module = ["llama_index.*", "pangea_multipass.*"]
follow_untyped_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
