[project]
name = "llama_index_examples"
version = "0.2.0"
description = "Pangea Multipass authorization library for Llama Index"
authors = [
    { name = "Apurv Jawle", email = "apurv.jawle@pangea.cloud" }
]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "pangea-multipass-llama-index (>=0.2.0)",
    "pangea-multipass (>=0.2.0)",
    "llama-index-llms-bedrock (==0.3.8)",
    "llama-index-embeddings-bedrock (==0.5.2)",
    "llama-index-readers-google (==0.7.1)",
    "llama-index-readers-confluence (==0.3.2)",
    "llama-index-readers-jira (==0.4.1)",
]

[dependency-groups]
dev = [
    "mypy==1.17.1",
]

[tool.uv.sources]
pangea-multipass = { path = "../../packages/pangea-multipass", editable = true }
pangea-multipass-llama-index = { path = "../../packages/pangea-multipass-llama-index", editable = true }

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
line_length = 120
