[project]
name = "multipass_examples"
version = "0.1.0"
description = "Pangea Multipass authorization library examples"
authors = [
    { name = "Apurv Jawle", email = "apurv.jawle@pangea.cloud" }
]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "pangea-multipass",
    "llama-index-readers-google (>=0.6.0)",
]

[tool.poetry.dependencies]
pangea-multipass = { path = "../../packages/pangea-multipass", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
