[project]
name = "multipass_examples"
version = "0.1.0"
description = "Pangea Multipass authorization library examples"
authors = [
    { name = "Apurv Jawle", email = "apurv.jawle@pangea.cloud" }
]
license = "MIT"
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "pangea-multipass",
    "llama-index-readers-google==0.6.1",
]

[dependency-groups]
dev = [
    "mypy==1.16.0",
    "types-requests==2.32.4.20250611",
]

[tool.uv.sources]
pangea-multipass = { path = "../../packages/pangea-multipass", editable = true }

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
