[tool.poetry]
name = "pangea-auth-core"
version = "0.1.0"
description = "Core Pangea Generalized Auth library"
authors = ["Apurv Jawle <apurv.jawle@pangea.cloud>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pangea_auth_core" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pangea-sdk = "^5.1.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
