[tool.poetry]
name = "pangea.auth.langchain"
version = "0.1.0"
description = "Pangea Generalized Auth library for Langchain"
authors = ["Apurv Jawle <apurv.jawle@pangea.cloud>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pangea_auth_langchain" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pangea-sdk = "^5.1.0"
google-auth-oauthlib = "^1.2.1"
langchain = "0.3.0"
langchain-community = "0.3.0"
langchain-aws = "0.2.1"
pangea-auth-core = { path = "../pangea-auth-core", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
