[tool.poetry]
name = "pangea-auth-llama-index"
version = "0.1.0"
description = "Pangea Generalized Auth library for Llama Index"
authors = ["Apurv Jawle <apurv.jawle@pangea.cloud>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pangea_auth_llama_index" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pangea-sdk = "^5.1.0"
google-auth-oauthlib = "^1.2.1"
llama-index = "0.11.11"
llama-index-llms-bedrock = "0.2.1"
llama-index-embeddings-bedrock = "0.3.1"
llama-index-readers-google = "^0.4.1"
llama-index-readers-confluence = "^0.2.1"
llama-index-readers-jira = "^0.3.1"
pangea-auth-core = { path = "../pangea-auth-core", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
