[tool.poetry]
name = "langchain_examples"
version = "0.1.0"
description = "Pangea Generalized Auth library for LangChain"
authors = ["Apurv Jawle <apurv.jawle@pangea.cloud>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pangea-sdk = "^5.1.0"
google-auth-oauthlib = "^1.2.1"
langchain = "0.3.0"
langchain-community = "0.3.0"
langchain-aws = "0.2.1"
pangea-auth-langchain = { path = "../../pangea-auth-langchain", develop = true }
google-api-python-client = "^2.151.0"
google-auth-httplib2 = "^0.2.0"
langchain-google-community = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
